[bugfix] repaired blurring

--- a/css/main.scss
+++ b/css/main.scss
@@ -391,7 +391,7 @@ table tr th :last-child, table tr td :last-child {
 
 .inline-footnote {
     display: none;
-    margin: 10px 0 14px;
+    margin: 12px 0 16px;
     font-size: 0.78em;
     border-left: 2px solid rgba(0, 0, 0, 0.2);
     padding-left: 10px;
